# 2018_fall_image_processing_final

./: .gitmodules  CMakeLists.txt  README.org
cmake/: utility.cmake
cmake/modules/: FindCImg.cmake
module/: CMakeLists.txt
module/gui/: CMakeLists.txt
module/gui/ADIPFinalProject1/: ADIPFinalProject1.pro  core.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget.cpp  widget.h
module/gui/build-ADIPFinalProject1-Desktop_Qt_MinGW_w64_32bit_MSYS2-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
module/gui/build-ADIPFinalProject1-Desktop_Qt_MinGW_w64_32bit_MSYS2-Debug/debug/: moc_mainwindow.cpp
report/: ADIP 2018 Fall Final Project Group 4.tex
report/doc_src/: bk.csv
spike/: a.cpp  cv.cpp  qt.cpp
